--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,11 @@
+
 @import '../../node_modules/antd/dist/antd.css';
-@import 'Main.css';
-@import 'Register.css';
 @import 'Login.css';
+@import 'Register.css';
+@import 'Main.css';
+@import 'Home.css';
 @import 'Header.css';
+@import 'AroundMarker.css';
 
 .App {
     text-align: center;
